--- a/The zombie sorcerer.cbp
+++ b/The zombie sorcerer.cbp
@@ -31,11 +31,20 @@
 			<Add option="-lallegro_primitives" />
 			<Add option="-lallegro_memfile" />
 		</Linker>
+		<Unit filename="data\bg\teste\layer0.lua" />
+		<Unit filename="data\bg\teste\teste.lua" />
+		<Unit filename="data\obj\effects\magic.lua" />
+		<Unit filename="data\obj\effects\magic_animation.lua" />
+		<Unit filename="data\obj\enemy\wizard\animation.lua" />
+		<Unit filename="data\obj\enemy\wizard\wizard.lua" />
+		<Unit filename="data\obj\player\Chicus\animation.lua" />
+		<Unit filename="data\obj\player\Chicus\chicus.lua" />
 		<Unit filename="include\animation_manager.hpp" />
 		<Unit filename="include\animationpack.hpp" />
 		<Unit filename="include\bg.hpp" />
 		<Unit filename="include\bg_layer.hpp" />
 		<Unit filename="include\collision_box.hpp" />
+		<Unit filename="include\enemy.hpp" />
 		<Unit filename="include\game.hpp" />
 		<Unit filename="include\include.hpp" />
 		<Unit filename="include\input.hpp" />
@@ -55,6 +64,7 @@
 		<Unit filename="src\bg.cpp" />
 		<Unit filename="src\bg_layer.cpp" />
 		<Unit filename="src\collision_box.cpp" />
+		<Unit filename="src\enemy.cpp" />
 		<Unit filename="src\game.cpp" />
 		<Unit filename="src\input.cpp" />
 		<Unit filename="src\lua.cpp" />
